[package]
name = "syn-match"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/shadaj/syn-match"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
license = "MIT"
keywords = ["parsing", "macros", "ast"]
categories = ["development-tools", "parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
insta = "1"
prettyplease = "0.2"
